--- a/home.html
+++ b/home.html
@@ -558,6 +558,11 @@
   
   <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
   <script src="js/others/jquery-confirm.min.js"></script>
+  <!-- daterangepicker -->
+  <script src="bower_components/moment/min/moment.min.js"></script>
+  <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+  <!-- datepicker -->
+  <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
   <script src="js/config.js"></script>
   <script src="js/login.js"></script>
