--- a/home.html
+++ b/home.html
@@ -557,6 +557,7 @@
   <script src="dist/js/demo.js"></script>
   
   <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
+  <link rel="stylesheet" href="css/jquery-confirm.min.css">
   <script src="js/others/jquery-confirm.min.js"></script>
   <!-- daterangepicker -->
   <script src="bower_components/moment/min/moment.min.js"></script>
