--- a/home.html
+++ b/home.html
@@ -533,8 +533,6 @@
 
   <!-- Data Table -->
   <script src="bower_components/datatables.net/js/jquery.dataTables.js"></script>
-  <!-- Easy AutoComplete -->
-  <script src="bower_components/EasyAutocomplete-1.3.5/jquery.easy-autocomplete.js"></script>
 
   <!-- Bootstrap 3.3.7 -->
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -564,6 +562,11 @@
   <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
   <!-- datepicker -->
   <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+
+  <!-- input mask -->
+  <script src="plugins/input-mask/jquery.inputmask.js"></script>
+  <script src="plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
+  <script src="plugins/input-mask/jquery.inputmask.extensions.js"></script>
 
   <script src="js/config.js"></script>
   <script src="js/login.js"></script>
