--- a/home.html
+++ b/home.html
@@ -547,6 +547,8 @@
   <script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
   <!-- SlimScroll -->
   <script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+  <!-- iCheck -->
+  <script src="plugins/iCheck/icheck.min.js"></script>
   <!-- ChartJS -->
   <script src="bower_components/chart.js/Chart.js"></script>
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
@@ -585,6 +587,7 @@
   <script src="js/dashboard.js"></script>
 
   <script src="js/reports/invoice.js"></script>
+  <script src="js/inbox.js"></script>
 
   <script>
 
