--- a/home.html
+++ b/home.html
@@ -241,6 +241,7 @@
 
   <script src="js/reports/invoice.js"></script>
   <script src="js/inbox.js"></script>
+  <script src="js/dynamiko-chart.js"></script>
 
   <script>
 
