--- a/home.html
+++ b/home.html
@@ -90,34 +90,18 @@
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                <span class="hidden-xs">Alexander Pierce</span>
+                <img src="dist/img/user2-160x160.jpg" class="user-image profilePicture" alt="User Image">
+                <span class="hidden-xs profileName">Alexander Pierce</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header">
-                  <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-
+                  <img src="dist/img/user2-160x160.jpg" class="img-circle profilePicture" alt="User Image">
                   <p>
-                    Alexander Pierce - Web Developer
-                    <small>Member since Nov. 2012</small>
+                    <span class="profileName">Alexander Pierce</span> - <span class="profileWork">Web Developer</span>
                   </p>
                 </li>
                 <!-- Menu Body -->
-                <li class="user-body">
-                  <div class="row">
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Followers</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Sales</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Friends</a>
-                    </div>
-                  </div>
-                  <!-- /.row -->
-                </li>
                 <!-- Menu Footer-->
                 <li class="user-footer">
                   <div class="pull-left">
@@ -244,6 +228,8 @@
   <script src="js/reports/invoice.js"></script>
   <script src="js/inbox.js"></script>
   <script src="js/dynamiko-chart.js"></script>
+
+  <script src="js/widgets/task-widget.js"></script>
 
   <script>
 
