--- a/login.html
+++ b/login.html
@@ -78,6 +78,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- iCheck -->
     <script src="plugins/iCheck/icheck.min.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/login.js"></script>
     <script src="js/constants.js"></script>
     <script>
