--- a/home.html
+++ b/home.html
@@ -228,8 +228,9 @@
   <script src="js/reports/invoice.js"></script>
   <script src="js/inbox.js"></script>
   <script src="js/dynamiko-chart.js"></script>
-
-  <script src="js/widgets/task-widget.js"></script>
+  <script src="js/dynamiko-widget-chart.js"></script>
+  
+  <script src="js/widgets/ticket-chart-widget.js"></script>
 
   <script>
 
