--- a/home.html
+++ b/home.html
@@ -231,7 +231,9 @@
   <script src="js/dynamiko-widget-chart.js"></script>
   
   <script src="js/widgets/ticket-chart-widget.js"></script>
-
+  <script src="js/widgets/sales-chart-widget.js"></script>
+  <script src="js/widgets/procurement-chart-widget.js"></script>
+  
   <script>
 
     $(function () {
