--- a/home.html
+++ b/home.html
@@ -87,6 +87,11 @@
                 <li class="footer"><a href="#">See All Tasks</a></li>
               </ul>
             </li>
+            <li class="dropdown messages-menu">
+              <a href="#" class="pivotTable">
+                <i class="fa fa-bar-chart"></i>
+              </a>
+            </li>
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -208,6 +213,11 @@
   <script src="plugins/input-mask/jquery.inputmask.js"></script>
   <script src="plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
   <script src="plugins/input-mask/jquery.inputmask.extensions.js"></script>
+
+  <link href="plugins/webdatarocks/webdatarocks.css" rel="stylesheet"/>
+  <script src="plugins/webdatarocks/webdatarocks.toolbar.js"></script>
+  <script src="plugins/webdatarocks/webdatarocks.googlecharts.js"></script>
+  <script src="plugins/webdatarocks/webdatarocks.js"></script>
 
   <script src="js/config.js"></script>
   <script src="js/login.js"></script>
