--- a/home.html
+++ b/home.html
@@ -230,6 +230,7 @@
   <script src="js/dynamiko-chart.js"></script>
   <script src="js/dynamiko-widget-chart.js"></script>
   
+  <script src="js/widgets/tasks-widget.js"></script>
   <script src="js/widgets/ticket-chart-widget.js"></script>
   <script src="js/widgets/sales-chart-widget.js"></script>
   <script src="js/widgets/procurement-chart-widget.js"></script>
