--- a/home.html
+++ b/home.html
@@ -238,6 +238,7 @@
   <script src="js/reports/invoice.js"></script>
   <script src="js/inbox.js"></script>
   <script src="js/dynamiko-chart.js"></script>
+  <script src="js/data-visualizer.js"></script>
   <script src="js/dynamiko-widget-chart.js"></script>
   
   <script src="js/widgets/tasks-widget.js"></script>
