--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
 
+  <link rel="stylesheet" href="plugins/printjs/print.min.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -199,7 +200,7 @@
   <!--<script src="dist/js/pages/dashboard2.js"></script>-->
   <!-- AdminLTE for demo purposes -->
   <script src="dist/js/demo.js"></script>
-  
+
   <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
   <link rel="stylesheet" href="css/jquery-confirm.min.css">
   <script src="js/others/jquery-confirm.min.js"></script>
@@ -214,10 +215,12 @@
   <script src="plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
   <script src="plugins/input-mask/jquery.inputmask.extensions.js"></script>
 
-  <link href="plugins/webdatarocks/webdatarocks.css" rel="stylesheet"/>
+  <link href="plugins/webdatarocks/webdatarocks.css" rel="stylesheet" />
   <script src="plugins/webdatarocks/webdatarocks.toolbar.js"></script>
   <script src="plugins/webdatarocks/webdatarocks.googlecharts.js"></script>
   <script src="plugins/webdatarocks/webdatarocks.js"></script>
+
+  <script src="plugins/printjs/print.min.js"></script>
 
   <script src="js/config.js"></script>
   <script src="js/login.js"></script>
@@ -240,12 +243,12 @@
   <script src="js/dynamiko-chart.js"></script>
   <script src="js/data-visualizer.js"></script>
   <script src="js/dynamiko-widget-chart.js"></script>
-  
+
   <script src="js/widgets/tasks-widget.js"></script>
   <script src="js/widgets/ticket-chart-widget.js"></script>
   <script src="js/widgets/sales-chart-widget.js"></script>
   <script src="js/widgets/procurement-chart-widget.js"></script>
-  
+
   <script>
 
     $(function () {
