--- a/home.html
+++ b/home.html
@@ -234,6 +234,7 @@
   <script src="js/childFieldConstructor.js"></script>
   <script src="js/mainJS.js"></script>
   <script src="js/mainObj.js"></script>
+  <script src="js/form-linker.js"></script>
 
   <script src="js/chart-utils.js"></script>
   <script src="js/dashboard.js"></script>
