--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="css/jquery.dataTables.css">
   <!-- home.css -->
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/slim-scroll.css">
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
