--- a/home.html
+++ b/home.html
@@ -250,6 +250,7 @@
   <script src="js/widgets/ticket-chart-widget.js"></script>
   <script src="js/widgets/sales-chart-widget.js"></script>
   <script src="js/widgets/procurement-chart-widget.js"></script>
+  <script src="js/widgets/hrform-widget.js"></script>
 
   <script>
 
