--- a/home.html
+++ b/home.html
@@ -252,6 +252,7 @@
   <script src="js/widgets/procurement-chart-widget.js"></script>
   <script src="js/widgets/hrforms-widget.js"></script>
   <script src="js/widgets/hrevents-widget.js"></script>
+  <script src="js/widgets/hrnews-widget.js"></script>
   <script src="js/widgets/hrdocuments-widget.js"></script>
 
   <script>
