--- a/home.html
+++ b/home.html
@@ -254,6 +254,7 @@
   <script src="js/widgets/hrevents-widget.js"></script>
   <script src="js/widgets/hrnews-widget.js"></script>
   <script src="js/widgets/hrdocuments-widget.js"></script>
+  <script src="js/widgets/mylinks-widget.js"></script>
 
   <script>
 
