--- a/home.html
+++ b/home.html
@@ -63,6 +63,16 @@
             <!-- Messages: style can be found in dropdown.less-->
             <li class="dropdown messages-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="fa fa-wechat"></i>
+              </a>
+              <ul class="dropdown-menu">
+                <li class="header">
+                  <div id="chat-context"></div>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown messages-menu">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-flag-o"></i>
               </a>
               <ul class="dropdown-menu">
@@ -222,6 +232,9 @@
   <script src="plugins/webdatarocks/webdatarocks.js"></script>
 
   <script src="plugins/printjs/print.min.js"></script>
+  <script src="plugins/velocityjs/velocity.min.js"></script>
+  <script src="plugins/chatty/chatModule.js"></script>
+  <link href="plugins/chatty/chat-style.css" rel="stylesheet" />
 
   <script src="js/config.js"></script>
   <script src="js/login.js"></script>
