--- a/home.html
+++ b/home.html
@@ -63,16 +63,6 @@
             <!-- Messages: style can be found in dropdown.less-->
             <li class="dropdown messages-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-wechat"></i>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="header">
-                  <div id="chat-context"></div>
-                </li>
-              </ul>
-            </li>
-            <li class="dropdown messages-menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-flag-o"></i>
               </a>
               <ul class="dropdown-menu">
@@ -233,6 +223,7 @@
 
   <script src="plugins/printjs/print.min.js"></script>
   <script src="plugins/velocityjs/velocity.min.js"></script>
+  <script src="plugins/velocityjs/velocity.ui.min.js"></script>
   <script src="plugins/chatty/chatModule.js"></script>
   <link href="plugins/chatty/chat-style.css" rel="stylesheet" />
 
@@ -268,6 +259,7 @@
   <script src="js/widgets/hrnews-widget.js"></script>
   <script src="js/widgets/hrdocuments-widget.js"></script>
   <script src="js/widgets/mylinks-widget.js"></script>
+  <script src="js/widgets/chat-widget.js"></script>
 
   <script>
 
