--- a/home.html
+++ b/home.html
@@ -94,6 +94,11 @@
                 <i class="fa fa-bar-chart"></i>
               </a>
             </li>
+            <li class="dropdown messages-menu">
+              <a href="#" class="myReportViewer">
+                <i class="fa fa-file-text"></i>
+              </a>
+            </li>
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -244,6 +249,7 @@
   <script src="js/inbox.js"></script>
   <script src="js/dynamiko-chart.js"></script>
   <script src="js/data-visualizer.js"></script>
+  <script src="js/myreport-viewer.js"></script>
   <script src="js/dynamiko-widget-chart.js"></script>
 
   <script src="js/widgets/tasks-widget.js"></script>
