--- a/sample.html
+++ b/sample.html
@@ -1,5 +1,34 @@
-<tr>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
+<div style="padding: 10px;">
+  <div class="box box-primary">
+    <div class="box-header with-border">
+      <div class="col-md-2">
+        Report Viewer
+      </div>
+      <div class="pull-right box-tools">
+        <div class="btn-group">
+          <button type="button" class="btn btn-info btnWf">Choose Report</button>
+          <button type="button" class="btn btn-info dropdown-toggle btnWf" data-toggle="dropdown" aria-expanded="true">
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu reportViewerList" role="menu" aria-labelledby="dropdownMenu">
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="box-body">
+      <div class="box box-info">
+        <div class="box-header with-border">
+          <h3 class="box-title reportViewerTitle">Choose Report</h3>
+        </div>
+        <form class="formCriteria">
+          <div class="box-body formCriteriaBody">
+          </div>
+          <div class="box-footer">
+            <button type="button" class="btn btn-info pull-right btnSubmitReportCriteria">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
