--- a/home.html
+++ b/home.html
@@ -213,6 +213,8 @@
   <!-- daterangepicker -->
   <script src="bower_components/moment/min/moment.min.js"></script>
   <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+  <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css">
+
   <!-- datepicker -->
   <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
@@ -251,6 +253,7 @@
   <script src="js/data-visualizer.js"></script>
   <script src="js/myreport-viewer.js"></script>
   <script src="js/dynamiko-widget-chart.js"></script>
+  <script src="js/reportLoader.js"></script>
 
   <script src="js/widgets/tasks-widget.js"></script>
   <script src="js/widgets/ticket-chart-widget.js"></script>
