--- a/home.html
+++ b/home.html
@@ -266,6 +266,9 @@
   <script src="js/widgets/mylinks-widget.js"></script>
   <script src="js/widgets/chat-widget.js"></script>
 
+  <script src="js/modules/modules-script.js"></script>
+  <script src="js/modules/SalesOrder.js"></script>
+
   <script>
 
     $(function () {
