--- a/home.html
+++ b/home.html
@@ -223,6 +223,8 @@
   <script src="plugins/input-mask/jquery.inputmask.date.extensions.js"></script>
   <script src="plugins/input-mask/jquery.inputmask.extensions.js"></script>
 
+  <!-- <script src="plugins/jquery-mask/jquery.mask.js"></script> -->
+
   <link href="plugins/webdatarocks/webdatarocks.css" rel="stylesheet" />
   <script src="plugins/webdatarocks/webdatarocks.toolbar.js"></script>
   <script src="plugins/webdatarocks/webdatarocks.googlecharts.js"></script>
@@ -267,7 +269,8 @@
   <script src="js/widgets/chat-widget.js"></script>
 
   <script src="js/modules/modules-script.js"></script>
-  <script src="js/modules/SalesOrder.js"></script>
+  <script src="js/modules/SalesOrderUI.js"></script>
+  <script src="js/modules/PurchaseOrderUI.js"></script>
 
   <script>
 
