--- a/home.html
+++ b/home.html
@@ -271,6 +271,7 @@
   <script src="js/modules/modules-script.js"></script>
   <script src="js/modules/SalesOrderUI.js"></script>
   <script src="js/modules/PurchaseOrderUI.js"></script>
+  <script src="js/modules/PayrollScheduleUI.js"></script>
 
   <script>
 
