--- a/home.html
+++ b/home.html
@@ -63,30 +63,18 @@
             <!-- Messages: style can be found in dropdown.less-->
             <li class="dropdown messages-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-flag-o"></i>
+                <span id="useCompany" style="padding-right: 15px;">Company 1</span><i class="fa fa-bank"></i>
               </a>
               <ul class="dropdown-menu">
-                <li class="header">View Tasks</li>
+                <li class="header text-center">Choose Company</li>
                 <li>
                   <!-- inner menu: contains the actual data -->
-                  <ul class="menu">
+                  <ul class="menu chooseCompanyList" style="overflow-y: auto; height: 300px;">
                     <li>
-                      <!-- start message -->
-                      <a href="#">
-                        <div class="pull-left">
-                          <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                        </div>
-                        <h4>
-                          Support Team
-                          <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                        </h4>
-                        <p>Why not buy a new awesome theme?</p>
-                      </a>
+                      <a href="#" class="chosenCompany">Support Team 1</a>
                     </li>
-                    <!-- end message -->
                   </ul>
                 </li>
-                <li class="footer"><a href="#">See All Tasks</a></li>
               </ul>
             </li>
             <li class="dropdown messages-menu">
@@ -116,11 +104,11 @@
                 <!-- Menu Body -->
                 <!-- Menu Footer-->
                 <li class="user-footer">
-                  <div class="pull-left">
+                  <!-- <div class="pull-left">
                     <a href="#" class="btn btn-default btn-flat">Profile</a>
-                  </div>
+                  </div> -->
                   <div class="pull-right">
-                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    <a href="#" class="btn btn-default btn-flat btnSignOut">Sign out</a>
                   </div>
                 </li>
               </ul>
