--- a/home.html
+++ b/home.html
@@ -62,8 +62,8 @@
           <ul class="nav navbar-nav">
             <!-- Messages: style can be found in dropdown.less-->
             <li class="dropdown messages-menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <span id="useCompany" style="padding-right: 15px;">Company 1</span><i class="fa fa-bank"></i>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="useCompany">
+                <span style="padding-right: 15px;"></span><i class="fa fa-bank"></i>
               </a>
               <ul class="dropdown-menu">
                 <li class="header text-center">Choose Company</li>
