--- a/home.html
+++ b/home.html
@@ -65,17 +65,6 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="useCompany">
                 <span style="padding-right: 15px;"></span><i class="fa fa-bank"></i>
               </a>
-              <ul class="dropdown-menu">
-                <li class="header text-center">Choose Company</li>
-                <li>
-                  <!-- inner menu: contains the actual data -->
-                  <ul class="menu chooseCompanyList" style="overflow-y: auto; height: 300px;">
-                    <li>
-                      <a href="#" class="chosenCompany">Support Team 1</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
             </li>
             <li class="dropdown messages-menu">
               <a href="#" class="pivotTable">
@@ -85,6 +74,11 @@
             <li class="dropdown messages-menu">
               <a href="#" class="myReportViewer">
                 <i class="fa fa-file-text"></i>
+              </a>
+            </li>
+            <li class="dropdown messages-menu">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="uploadDataFile">
+                <i class="fa fa-upload"></i>
               </a>
             </li>
             <!-- User Account: style can be found in dropdown.less -->
@@ -244,6 +238,7 @@
   <script src="js/myreport-viewer.js"></script>
   <script src="js/dynamiko-widget-chart.js"></script>
   <script src="js/reportLoader.js"></script>
+  <script src="js/upload-data-file.js"></script>
 
   <script src="js/widgets/tasks-widget.js"></script>
   <script src="js/widgets/ticket-chart-widget.js"></script>
