--- a/home.html
+++ b/home.html
@@ -255,6 +255,7 @@
   <script src="js/modules/SalesOrderUI.js"></script>
   <script src="js/modules/PurchaseOrderUI.js"></script>
   <script src="js/modules/PayrollScheduleUI.js"></script>
+  <script src="js/modules/UserUI.js"></script>
 
   <script>
 
