--- a/home.html
+++ b/home.html
@@ -122,8 +122,10 @@
       <section class="sidebar">
         <!-- Sidebar user panel -->
         <!-- sidebar menu: : style can be found in sidebar.less -->
-        <ul class="sidebar-menu" data-widget="tree">
+        <ul class="sidebar-menu">
           <li class="header">MAIN NAVIGATION</li>
+          <ul class="sidebar-menu mysidemenu" data-widget="tree" style="max-height:700px; overflow-y:auto;">
+          </ul>
         </ul>
       </section>
       <!-- /.sidebar -->
