--- a/login.html
+++ b/login.html
@@ -80,6 +80,12 @@
     <script src="plugins/iCheck/icheck.min.js"></script>
     <script src="js/config.js"></script>
     <script src="js/login.js"></script>
+
+    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
+    <link rel="stylesheet" href="css/jquery-confirm.min.css">
+    <script src="js/others/jquery-confirm.min.js"></script>
+    <script src="js/alertConfirm.js"></script>
+
     <script src="js/constants.js"></script>
     <script>
         $(function () {
