--- a/home.html
+++ b/home.html
@@ -61,10 +61,22 @@
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
             <!-- Messages: style can be found in dropdown.less-->
-            <li class="dropdown messages-menu">
+            <li class="dropdown company company-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="useCompany">
                 <span style="padding-right: 15px;"></span><i class="fa fa-bank"></i>
               </a>
+
+              <ul class="dropdown-menu sidebar-menu tree" data-widget="tree" style="max-height:700px; overflow-y:auto;">
+                <li><a href="#" class="leftMenuItem manageEmployee"><i class="fa fa-dashboard"></i> <span>Manage Employee</span></a></li>
+                <li><a href="#" class="leftMenuItem manageUserRoles"><i class="fa fa-dashboard"></i> <span>Manage User Roles</span></a></li>
+                <li><a href="#" class="leftMenuItem manageDepartment"><i class="fa fa-dashboard"></i> <span>Manage Department</span></a></li>
+                <li><a href="#" class="leftMenuItem manageTaxCategory"><i class="fa fa-dashboard"></i> <span>Manage Tax Category</span></a></li>
+                <li><a href="#" class="leftMenuItem manageAccountChart"><i class="fa fa-dashboard"></i> <span>Manage Account Chart</span></a></li>
+                <li><a href="#" class="leftMenuItem manageProduct"><i class="fa fa-dashboard"></i> <span>Manage Product</span></a></li>
+                <li><a href="#" class="leftMenuItem manageBenefit"><i class="fa fa-dashboard"></i> <span>Manage Benefit</span></a></li>
+                <li><a href="#" class="leftMenuItem manageSupplier"><i class="fa fa-dashboard"></i> <span>Manage Supplier</span></a></li>
+              </ul>
+
             </li>
             <li class="dropdown messages-menu">
               <a href="#" class="pivotTable">
@@ -85,14 +97,14 @@
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <img src="dist/img/user2-160x160.jpg" class="user-image profilePicture" alt="User Image">
-                <span class="hidden-xs profileName">Alexander Pierce</span>
+                <span class="hidden-xs profileName">User</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header">
                   <img src="dist/img/user2-160x160.jpg" class="img-circle profilePicture" alt="User Image">
                   <p>
-                    <span class="profileName">Alexander Pierce</span> - <span class="profileWork">Web Developer</span>
+                    <span class="profileName">User</span> - <span class="profileWork">User</span>
                   </p>
                 </li>
                 <!-- Menu Body -->
