--- a/home.html
+++ b/home.html
@@ -57,6 +57,9 @@
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
           <span class="sr-only">Toggle navigation</span>
         </a>
+        <a href="#" class="selectedModule" style="float: left; padding: 10px 10px;">
+            <span style="color: aliceblue; font-size: 18px;">Customer 360</span>
+        </a>
         <!-- Navbar Right Menu -->
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
