--- a/sample.html
+++ b/sample.html
@@ -1,34 +1,8 @@
-<div style="padding: 10px;">
-  <div class="box box-primary">
-    <div class="box-header with-border">
-      <div class="col-md-2">
-        Report Viewer
-      </div>
-      <div class="pull-right box-tools">
-        <div class="btn-group">
-          <button type="button" class="btn btn-info btnWf">Choose Report</button>
-          <button type="button" class="btn btn-info dropdown-toggle btnWf" data-toggle="dropdown" aria-expanded="true">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <ul class="dropdown-menu reportViewerList" role="menu" aria-labelledby="dropdownMenu">
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="box-body">
-      <div class="box box-info">
-        <div class="box-header with-border">
-          <h3 class="box-title reportViewerTitle">Choose Report</h3>
-        </div>
-        <form class="formCriteria">
-          <div class="box-body formCriteriaBody">
-          </div>
-          <div class="box-footer">
-            <button type="button" class="btn btn-info pull-right btnSubmitReportCriteria">Submit</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+<div class="user-block">
+  <img class="img-circle img-bordered-sm" src="../../dist/img/user1-128x128.jpg" alt="user image">
+      <span class="username">
+        <a href="#">Jonathan Burke Jr.</a>
+        <a href="#" class="pull-right btn-box-tool"><i class="fa fa-times"></i></a>
+      </span>
+  <span class="description">Shared publicly - 7:30 PM today</span>
 </div>
