--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
           <span class="sr-only">Toggle navigation</span>
         </a>
         <a href="#" class="selectedModule" style="float: left; padding: 10px 10px;">
-            <span style="color: aliceblue; font-size: 18px;">Customer 360</span>
+            <span style="color: aliceblue; font-size: 18px;"></span>
         </a>
         <!-- Navbar Right Menu -->
         <div class="navbar-custom-menu">
