--- a/home.html
+++ b/home.html
@@ -36,6 +36,10 @@
   <!-- home.css -->
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
+
+  <link href="/bower_components/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
+  <script src="/bower_components/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
