--- a/home.html
+++ b/home.html
@@ -36,9 +36,6 @@
   <!-- home.css -->
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
-
-  <script src="js/dropzone.js"></script>
-
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -233,6 +230,9 @@
   <script src="plugins/webdatarocks/webdatarocks.js"></script>
 
   <script src="plugins/printjs/print.min.js"></script>
+
+  <script src="js/others/dropzone.js"></script>
+  <script src="js/others/jquery.fullscreen.js"></script>
 
   <script src="js/config.js"></script>
   <script src="js/login.js"></script>
