--- a/home.html
+++ b/home.html
@@ -277,6 +277,8 @@
   <script src="js/modules/PayrollScheduleUI.js"></script>
   <script src="js/modules/UserUI.js"></script>
 
+  <script src="js/saas/ReviewCenter.js"></script>
+  
   <script>
 
     $(function () {
