--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="css/jquery.dataTables.css">
   <!-- home.css -->
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/autocomplete.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
 </head>
 
@@ -247,6 +248,8 @@
   <script src="js/mainJS.js"></script>
   <script src="js/mainObj.js"></script>
   <script src="js/form-linker.js"></script>
+  <script src="js/autocomplete.js"></script>
+  <script src="js/buttonAction.js"></script>
 
   <script src="js/chart-utils.js"></script>
   <script src="js/dashboard.js"></script>
