--- a/home.html
+++ b/home.html
@@ -246,6 +246,7 @@
   <script src="js/fieldConstructor.js"></script>
   <script src="js/childFieldConstructor.js"></script>
   <script src="js/mainJS.js"></script>
+  <script src="js/register.js"></script>
   <script src="js/mainObj.js"></script>
   <script src="js/form-linker.js"></script>
   <script src="js/autocomplete.js"></script>
