--- a/home.html
+++ b/home.html
@@ -37,6 +37,8 @@
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/autocomplete.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
+ 
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -182,6 +184,9 @@
 
   <!-- Data Table -->
   <script src="bower_components/datatables.net/js/jquery.dataTables.js"></script>
+  <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+  <script src="https://cdn.datatables.net/fixedcolumns/3.3.0/js/dataTables.fixedColumns.min.js"></script>
+  
 
   <!-- Bootstrap 3.3.7 -->
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
