--- a/home.html
+++ b/home.html
@@ -256,6 +256,7 @@
   <script src="js/form-linker.js"></script>
   <script src="js/autocomplete.js"></script>
   <script src="js/buttonAction.js"></script>
+  <script src="js/custom-report.js"></script>
 
   <script src="js/chart-utils.js"></script>
   <script src="js/dashboard.js"></script>
