--- a/sample.html
+++ b/sample.html
@@ -26,7 +26,7 @@
           <!-- /.box-body -->
         </div>
 
-        <table class="display childRecord" style="width:100%" submodule="PersonAddressUI"
+        <table class="display displayTab" style="width:100%" submodule="PersonAddressUI"
           columns="addressType,wholeAddress,city,country" childFieldId="PersonAddressId">
           <thead>
             <tr>
