--- a/home.html
+++ b/home.html
@@ -178,6 +178,35 @@
   </div>
   <!-- ./wrapper -->
 
+  <div class="autoModalReports">
+    <div class="modal" tabindex="-1" id="AutoReport" role="dialog" aria-labelledby="AutoReportLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title autoModalReportTitle">Report Viewer</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="box box-primary">
+                        <div class="box-header with-border">
+                            <a href="#" class="pull-right btn-box-tool btnCustomReportFullScreen" report="AutoReport">Full Screen</a>
+                        </div>
+                        <div class="box-body">
+                            <div class="row">
+                                <iframe class="customReportViewerFrame" src="" style="width: 100%; height:500px;" report="AutoReport" webkitAllowFullScreen mozAllowFullScreen allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="box-footer text-center">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
   <!-- jQuery 3 -->
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
