--- a/home.html
+++ b/home.html
@@ -347,8 +347,7 @@
           }
       };
 
-      uiVersion = new UIVersion();
-      uiVersion.initVersions();
+      uiCache = new UICache();
       searchCache = new SearchCache();      
       searchCache.initSearchCache();
 
