--- a/home.html
+++ b/home.html
@@ -315,6 +315,7 @@
   <script src="js/modules/SalesOrderUI.js"></script>
   <script src="js/modules/PurchaseOrderUI.js"></script>
   <script src="js/modules/PayrollScheduleUI.js"></script>
+  <script src="js/modules/HrRequisitionUI.js"></script>
   <script src="js/modules/UserUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
