--- a/login.html
+++ b/login.html
@@ -89,6 +89,7 @@
     <script src="js/constants.js"></script>
     <script>
         $(function () {
+            sessionStorage.clear();
             $('input').iCheck({
                 checkboxClass: 'icheckbox_square-blue',
                 radioClass: 'iradio_square-blue',
