--- a/home.html
+++ b/home.html
@@ -299,6 +299,7 @@
   <script src="js/dynamiko-widget-chart.js"></script>
   <script src="js/reportLoader.js"></script>
   <script src="js/upload-data-file.js"></script>
+  <script src="js/quick-updater.js"></script>
 
   <script src="js/widgets/tasks-widget.js"></script>
   <script src="js/widgets/ticket-chart-widget.js"></script>
