--- a/home.html
+++ b/home.html
@@ -208,7 +208,7 @@
     <div id="calendarQuickUpdater">
 
         <div class="input-group date">
-            <input type="text" class="form-control calendar displayEdit" style="width: 100px;">
+            <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" type="text" class="form-control calendar displayEdit calendarQuickUpdaterInput" style="width: 100px;">
             <div class="input-group-addon displayEdit">
                 <i class="fa fa-calendar"></i>
             </div>
