--- a/home.html
+++ b/home.html
@@ -206,14 +206,15 @@
     </div>
 
     <div id="calendarQuickUpdater">
-
         <div class="input-group date">
             <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" type="text" class="form-control calendar displayEdit calendarQuickUpdaterInput" style="width: 100px;">
             <div class="input-group-addon displayEdit">
                 <i class="fa fa-calendar"></i>
             </div>
         </div>
-
+    </div>
+    <div id="textQuickUpdater">
+      <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" type="text" class="form-control displayEdit textQuickUpdaterInput" style="width: 250px;">
     </div>
 
   </div>
