--- a/home.html
+++ b/home.html
@@ -178,7 +178,7 @@
   </div>
   <!-- ./wrapper -->
 
-  <div class="allModal">
+  <div class="allModal" style="display: none;">
     <div class="modal" tabindex="-1" id="AutoReport" role="dialog" aria-labelledby="AutoReportLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -207,14 +207,27 @@
 
     <div id="calendarQuickUpdater">
         <div class="input-group date">
-            <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" type="text" class="form-control calendar displayEdit calendarQuickUpdaterInput" style="width: 100px;">
+            <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" name="##FIELDNAME##" type="text" class="form-control calendar displayEdit calendarQuickUpdaterInput" style="width: 100px;">
             <div class="input-group-addon displayEdit">
                 <i class="fa fa-calendar"></i>
             </div>
         </div>
     </div>
     <div id="textQuickUpdater">
-      <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" type="text" class="form-control displayEdit textQuickUpdaterInput" style="width: 250px;">
+      <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" name="##FIELDNAME##" type="text" class="form-control displayEdit textQuickUpdaterInput" style="width: 250px;">
+    </div>
+    <div id="autoCompleteQuickUpdater">
+      <div class="input-group">
+        <input quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" name="##FIELDNAME##" autoName="##FIELDNAME##" type="text" 
+          class="form-control autocomplete displayEdit autoCompleteQuickUpdaterInput" style="width: 250px;">
+        <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
+      </div>
+      <div class="input-group">
+        <select quickUpdaterId="##QUICKUPDATERID##" module="##MODULE##" recordId="##RECORDID##" fieldName="##FIELDNAME##" autoName="##FIELDNAME##" size="3"
+          class="form-control autoCompleteQuickUpdaterSelect" style="width: 250px;">
+        </select>
+      </div>
+      <input class="form-control HiddenAutoComplete" name="##FIELDNAME##" type="hidden" module="##MODULE##" mainmodule="##MODULE##" autoNameField="##FIELDNAME##">
     </div>
 
   </div>
