--- a/home.html
+++ b/home.html
@@ -30,14 +30,13 @@
   <![endif]-->
 
   <!-- Google Font -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+  <link rel="stylesheet" href="css/google.fonts.css">
   <link rel="stylesheet" href="css/jquery.dataTables.css">
   <!-- home.css -->
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/autocomplete.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css"> -->
  
 </head>
 
@@ -240,8 +239,8 @@
 
   <!-- Data Table -->
   <script src="bower_components/datatables.net/js/jquery.dataTables.js"></script>
-  <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
-  <script src="https://cdn.datatables.net/fixedcolumns/3.3.0/js/dataTables.fixedColumns.min.js"></script>
+  <!-- <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script> -->
+  <!-- <script src="https://cdn.datatables.net/fixedcolumns/3.3.0/js/dataTables.fixedColumns.min.js"></script> -->
   
 
   <!-- Bootstrap 3.3.7 -->
@@ -268,7 +267,7 @@
   <!-- AdminLTE for demo purposes -->
   <script src="dist/js/demo.js"></script>
 
-  <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
+  <script src="js/others/jquery-migrate-3.0.0.js"></script>
   <link rel="stylesheet" href="css/jquery-confirm.min.css">
   <script src="js/others/jquery-confirm.min.js"></script>
   <!-- daterangepicker -->
