--- a/home.html
+++ b/home.html
@@ -25,8 +25,8 @@
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <script src="js/others/html5shiv.min.js"></script>
+  <script src="js/others/respond.min.js"></script>
   <![endif]-->
 
   <!-- Google Font -->
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/autocomplete.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
-  <!-- <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css"> -->
+  <link rel="stylesheet" href="css/responsive.dataTables.css">
  
 </head>
 
@@ -239,8 +239,8 @@
 
   <!-- Data Table -->
   <script src="bower_components/datatables.net/js/jquery.dataTables.js"></script>
-  <!-- <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script> -->
-  <!-- <script src="https://cdn.datatables.net/fixedcolumns/3.3.0/js/dataTables.fixedColumns.min.js"></script> -->
+  <script src="js/others/dataTables.responsive.js"></script>
+  <script src="js/others/dataTables.fixedColumns.js"></script>
   
 
   <!-- Bootstrap 3.3.7 -->
