--- a/home.html
+++ b/home.html
@@ -306,7 +306,7 @@
   <script src="js/childTab.js"></script>
   <script src="js/fieldConstructor.js"></script>
   <script src="js/childFieldConstructor.js"></script>
-  <script src="js/mainJS.js"></script>
+  <script src="js/ui-service.js"></script>
   <script src="js/register.js"></script>
   <script src="js/mainObj.js"></script>
   <script src="js/form-linker.js"></script>
@@ -347,38 +347,9 @@
 
   <script src="js/saas/ReviewCenter.js"></script>
   
-  <script>
-
-    $(function () {
-      lStorage = {
-          set: function (key, value) {
-              window.localStorage.setItem( key, JSON.stringify(value) );
-          },
-          get: function (key) {
-              try {
-                  return JSON.parse( window.localStorage.getItem(key) );
-              } catch (e) {
-                  return null;
-              }
-          }
-      };
-      sStorage = {
-          set: function (key, value) {
-              window.sessionStorage.setItem( key, JSON.stringify(value) );
-          },
-          get: function (key) {
-              try {
-                  return JSON.parse( window.sessionStorage.getItem(key) );
-              } catch (e) {
-                  return null; 
-              }
-          }
-      };
-      searchCache.initSearchCache();
-      uiService.initHome();
-    });
-
-  </script>
+  <script src="js/main-initializer.js"></script>
+  <script src="js/global-events.js"></script>
+  <script src="js/mainJS.js"></script>
 </body>
 
 </html>
