Working Refactor of Global Events and Main

--- a/home.html
+++ b/home.html
@@ -304,6 +304,7 @@
   <script src="js/constructForm.js"></script>
   <script src="js/constructReport.js"></script>
   <script src="js/childTab.js"></script>
+  <script src="js/childTabs.js"></script>
   <script src="js/fieldConstructor.js"></script>
   <script src="js/childFieldConstructor.js"></script>
   <script src="js/ui-service.js"></script>
