--- a/home.html
+++ b/home.html
@@ -349,6 +349,7 @@
   <script src="js/saas/ReviewCenter.js"></script>
   
   <script src="js/main-initializer.js"></script>
+  <script src="js/global-events-hr.js"></script>
   <script src="js/global-events.js"></script>
   <script src="js/mainJS.js"></script>
 </body>
