--- a/home.html
+++ b/home.html
@@ -340,6 +340,7 @@
   <script src="js/upload-data-file.js"></script>
   <script src="js/quick-updater.js"></script>
   <script src="js/quick-searcher.js"></script>
+  <script src="js/dynamiko-cache.js"></script>
 
   <script src="js/widgets/tasks-widget.js"></script>
   <script src="js/widgets/ticket-chart-widget.js"></script>
