--- a/home.html
+++ b/home.html
@@ -229,17 +229,15 @@
       <input class="form-control HiddenAutoComplete" name="##FIELDNAME##" type="hidden" module="##MODULE##" mainmodule="##MODULE##" autoNameField="##FIELDNAME##">
     </div>
     <div id="quickMainSearcher">
-      <div class="input-group">
+      <div class="input-group" style="min-width: 350px;">
         <input module="##MODULE##" type="text" placeholder="Please type for search" class="form-control displayEdit quickMainSearcherInput">
         <span class="input-group-addon displayEdit"><i class="fa fa-search"></i></span>
       </div>
-      <div class="input-group">
-        <div class="box-body">
-          <div module="##MODULE##" class="quickMainSearcherResult" style="max-height: 700px; overflow-y: auto;">
-          </div>
+      <div class="box-body">
+        <div module="##MODULE##" class="quickMainSearcherResult" style="max-height: 700px; overflow-y: auto;">
         </div>
       </div>
-    </div>
+  </div>
 
   </div>
 </div>
@@ -359,6 +357,7 @@
   <script src="js/modules/PayrollScheduleUI.js"></script>
   <script src="js/modules/HrRequisitionUI.js"></script>
   <script src="js/modules/UserUI.js"></script>
+  <script src="js/modules/EmployeeUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
