In Progress - Payroll Update for Hours, Benefits and Adjustments

--- a/home.html
+++ b/home.html
@@ -309,6 +309,7 @@
   <script src="js/others/localforage.js"></script>
 
   <script src="js/config.js"></script>
+  <script src="js/dynamiko-fullscreen.js"></script>
   <script src="js/login.js"></script>
   <script src="js/alertConfirm.js"></script>
   <script src="js/ajaxCaller.js"></script>
